rename bee my love

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<div class="carousel-list">
 		<ul class="list-group">
 			<li class="list-group-item"><a href="./institutional/">Institutional</a></li>
-			<li class="list-group-item"><a href="./bemylove/">Bee My Love</a></li>
+			<li class="list-group-item"><a href="./beemylove/">Bee My Love</a></li>
 			<li class="list-group-item"><a href="./crownyourlove/">Crown Your Love</a></li>
 		</ul>
 	</div>
