--- a/beemylove/index.html
+++ b/beemylove/index.html
@@ -9,7 +9,7 @@
   </head>
   
   <body>
-	<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel" data-interval="false">
+	<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel" data-interval="false" data-touch="false">
 	  <div class="carousel-inner">
 		<div class="carousel-item active">
 		  <img src="../asset/images/bemylove/12.png" class="d-block w-100" alt="institutional01">
